# matplotc

./: CMakeLists.txt  README.md
examples/: simple_plot.cpp
include/: plotter.h
src/: plotter.cpp
